[gd_scene load_steps=15 format=4 uid="uid://bpht8n8gbuh3e"]

[ext_resource type="PackedScene" uid="uid://dy3xmc8rtyi0x" path="res://scenes/player.tscn" id="1_c7wlg"]
[ext_resource type="Script" path="res://scripts/players_manager.gd" id="3_lilgp"]
[ext_resource type="Texture2D" uid="uid://blim6s6ji1rg4" path="res://assets/sprites/tile.png" id="4_jv3m5"]
[ext_resource type="Script" path="res://scripts/ui_manager.gd" id="5_h4h73"]
[ext_resource type="Texture2D" uid="uid://c888n4w0cws7p" path="res://pomsplash_brown-export.png" id="6_cgbmx"]
[ext_resource type="Texture2D" uid="uid://2brxsl6ipmxo" path="res://assets/sprites/HUD_border.png" id="6_vr7en"]
[ext_resource type="Script" path="res://scenes/controls_display.gd" id="7_0rgq4"]
[ext_resource type="PackedScene" uid="uid://cbrebhfxnyybx" path="res://scenes/base_button.tscn" id="7_3pwpa"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="7_ab3t6"]
[ext_resource type="PackedScene" uid="uid://bj8c65t2bnxt5" path="res://scenes/base_label.tscn" id="7_ftedd"]
[ext_resource type="PackedScene" uid="uid://ehnlewjlvqun" path="res://scenes/input_selection_menu.tscn" id="9_io0rg"]
[ext_resource type="PackedScene" uid="uid://6esu77kj8ju6" path="res://scenes/settings_menu.tscn" id="12_jdjw0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tkdd6"]
texture = ExtResource("4_jv3m5")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ue1oc"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_tkdd6")

[node name="Main" type="Node"]

[node name="World" type="Node2D" parent="."]
texture_filter = 1

[node name="FloorTiles" type="TileMapLayer" parent="World"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAAAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAD7/wcAAAAAAAAAAAD8/wcAAAAAAAAAAAD9/wcAAAAAAAAAAAD+/wcAAAAAAAAAAAD//wcAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAD7/wYAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wAAAAAAAAAAAAD7////AAAAAAAAAAD7//7/AAAAAAAAAAD7//3/AAAAAAAAAAD7//z/AAAAAAAAAAD7//v/AAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD9/wYAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wAAAAAAAAAAAAD9////AAAAAAAAAAD9//7/AAAAAAAAAAD9//3/AAAAAAAAAAD9//z/AAAAAAAAAAD9//v/AAAAAAAAAAD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wYAAAAAAAAAAAD//wUAAAAAAAAAAAD//wQAAAAAAAAAAAD//wMAAAAAAAAAAAD//wIAAAAAAAAAAAD//wEAAAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAD///7/AAAAAAAAAAD///3/AAAAAAAAAAD///z/AAAAAAAAAAD///v/AAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAABAP7/AAAAAAAAAAABAP3/AAAAAAAAAAABAPz/AAAAAAAAAAABAPv/AAAAAAAAAAACAPv/AAAAAAAAAAACAPz/AAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAADAP//AAAAAAAAAAADAP7/AAAAAAAAAAADAP3/AAAAAAAAAAADAPz/AAAAAAAAAAADAPv/AAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAACAAIAAAAAAAAAAAABAAIAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAABAAUAAAAAAAAAAAABAAQAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAADAAUAAAAAAAAAAAADAAQAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAP//AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAPv/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAP//AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAPv/AAAAAAAAAAAIAPv/AAAAAAAAAAAIAPz/AAAAAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAP//AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAPv/AAAAAAAAAAAKAPv/AAAAAAAAAAAKAPz/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_ue1oc")

[node name="Players" type="Node2D" parent="World" node_paths=PackedStringArray("spawn_points")]
script = ExtResource("3_lilgp")
player_scene = ExtResource("1_c7wlg")
spawn_points = [NodePath("SpawnPoint1"), NodePath("SpawnPoint2")]

[node name="Player" parent="World/Players" groups=["player"] instance=ExtResource("1_c7wlg")]
position = Vector2(180, 156)

[node name="Player2" parent="World/Players" groups=["player"] instance=ExtResource("1_c7wlg")]
position = Vector2(180, 156)

[node name="SpawnPoint1" type="Node2D" parent="World/Players"]
position = Vector2(360, 160)

[node name="SpawnPoint2" type="Node2D" parent="World/Players"]
position = Vector2(360, 560)

[node name="GameCamera" type="Camera2D" parent="World"]
position = Vector2(360, 360)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_h4h73")

[node name="LoadingScreen" type="Control" parent="UI"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/LoadingScreen"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_cgbmx")

[node name="GameUI" type="Control" parent="UI"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HUDBorder" type="Sprite2D" parent="UI/GameUI"]
modulate = Color(0.15, 0.0761102, 0.112487, 1)
texture_filter = 1
position = Vector2(360, 360)
texture = ExtResource("6_vr7en")

[node name="HUDBorderProp" type="Sprite2D" parent="UI/GameUI"]
modulate = Color(0.15, 0.0761102, 0.112487, 1)
texture_filter = 1
position = Vector2(360, 360)
texture = ExtResource("6_vr7en")

[node name="ScoreDisplay" type="HBoxContainer" parent="UI/GameUI"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 40.0
alignment = 1

[node name="P1Score" parent="UI/GameUI/ScoreDisplay" instance=ExtResource("7_ftedd")]
layout_mode = 2
theme_override_colors/font_color = Color(0.294118, 0.611765, 1, 1)
theme_override_font_sizes/font_size = 45
text = "0"

[node name="HSeparator" type="HSeparator" parent="UI/GameUI/ScoreDisplay"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="P2Score" parent="UI/GameUI/ScoreDisplay" instance=ExtResource("7_ftedd")]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.294118, 0.294118, 1)
theme_override_font_sizes/font_size = 45
text = "0"

[node name="ControlsDisplay" type="Control" parent="UI/GameUI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_0rgq4")

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_ab3t6")

[node name="CenterContainer" type="CenterContainer" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/CenterContainer"]
layout_direction = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="Play" parent="UI/MainMenu/CenterContainer/VBoxContainer" instance=ExtResource("7_3pwpa")]
layout_mode = 2
text = "PLAY"

[node name="Settings" parent="UI/MainMenu/CenterContainer/VBoxContainer" instance=ExtResource("7_3pwpa")]
layout_mode = 2
text = "SETTINGS"

[node name="Exit" parent="UI/MainMenu/CenterContainer/VBoxContainer" instance=ExtResource("7_3pwpa")]
layout_mode = 2
text = "EXIT"

[node name="InputSelectionMenu" parent="UI" instance=ExtResource("9_io0rg")]

[node name="SettingsMenu" parent="UI" instance=ExtResource("12_jdjw0")]

[connection signal="pressed" from="UI/MainMenu/CenterContainer/VBoxContainer/Play" to="UI/MainMenu" method="_on_play_pressed"]
[connection signal="pressed" from="UI/MainMenu/CenterContainer/VBoxContainer/Settings" to="UI/MainMenu" method="_on_settings_pressed"]
[connection signal="pressed" from="UI/MainMenu/CenterContainer/VBoxContainer/Exit" to="UI/MainMenu" method="_on_exit_pressed"]

[editable path="UI/InputSelectionMenu"]
[editable path="UI/SettingsMenu"]
